# shared

./: .gitignore  CLAUDE.md  PLAYBOOK.md  README.md  TODO.md  google-genai-reference.md  xai-grok-openai-integration.md
apps/emojihunt/: README.md  pyproject.toml
apps/emojihunt/docs/plans/: 2026-03-06_emojihunt-design-spec.md  2026-03-13_emojihunt-implementation-plan.md
apps/emojihunt/src/emojihunt/: __init__.py  __main__.py  analyzer.py  catalog_html.py  cli.py  emoji_data.py  errors.py  filter.py  models.py  output_segments.py  path_mapping.py  report_html.py  reporter.py  scanner.py
apps/emojihunt/tests/: test_analyzer.py  test_emojihunt.py  test_filter.py  test_path_mapping.py  test_reporter.py  test_scanner.py
apps/poly-chat/: .gitignore  AI_PROVIDERS.md  ARCHITECTURE.md  DECISIONS.md  README.md  WHAT.md  WISHES.md  WORK_LOG.md  _HOW.md  _WHAT.md  pyproject.toml
apps/poly-chat/docs/: publishing.md  refactoring-complete.md
apps/poly-chat/docs/ai/: README.md  anthropic-python-sdk-guide.md  deepseek-api-integration.md  openai-responses-api-complete-reference.md  perplexity-api-guide.md  poly-chat-provider-search-codex-2026-02-09.md  poly-chat-providers-copilot-analysis.md
apps/poly-chat/docs/architecture/: REFACTORING_PLAN.md  smart-context.md
apps/poly-chat/docs/plans/: 2026-02-07-refactoring.md  README.md  claude-2026-02-11-code-review-refactoring-plan.md  codex-2026-02-11-safe-shipping-review-plan.md  comprehensive-issue-remediation-plan-2026-02-10.md  consolidated-action-plan-2026-02-11.md  copilot-code-review-2026-02-11.md  tangled-type-separation-plan-2026-02-10.md  web-search-implementation-context.md  web-search-implementation-plan.md
apps/poly-chat/docs/security/: path-security-audit.md  security-review-2026-02-07.md
apps/poly-chat/internal_docs/: README.md  WHAT.md  openai-integration-guide.md
apps/poly-chat/prompts/: safety.txt  summary.txt  title.txt
apps/poly-chat/prompts/system/: README.md  critic.txt  default.txt  devil.txt  razor.txt  scholar.txt  socrates.txt  spark.txt  strategist.txt
apps/poly-chat/src/poly_chat/: __init__.py  ai_runtime.py  app_state.py  chat.py  chat_manager.py  citations.py  cli.py  cli_paths.py  commands.py  constants.py  conversation.py  helper_ai.py  hex_id.py  html_parser.py  logging_utils.py  message_formatter.py  models.py  orchestrator.py  page_fetcher.py  path_mapping.py  path_utils.py  profile.py  repl.py  (+5 more)
apps/poly-chat/system-prompts/: concise.txt  default.txt  helpful.txt
apps/poly-chat/tests/: __init__.py  conftest.py  test_ai_limits.py  test_ai_runtime_limits.py  test_all_models_integration.py  test_chat.py  test_chat_integration.py  test_chat_manager.py  test_citations.py  test_cli.py  test_commands_defaults.py  test_commands_history.py  test_commands_input.py  test_commands_purge.py  test_commands_rewind.py  test_commands_runtime.py  test_commands_safe.py  test_commands_status.py  test_conversation.py  test_helper_ai.py  test_hex_id.py  test_logging_utils.py  test_message_formatter.py  test_mode_combinations.py  test_models.py  test_models_integration.py  test_orchestrator.py  test_path_security.py  test_profile.py  test_provider_limit_forwarding.py  test_repl_orchestration.py  test_search_feature.py  test_session_manager.py  test_session_state.py  test_streaming.py
apps/poly-chat/tools/: clean.command  install.command  run-chat-integration-test.command  run-e2e-test.command  run-integration-test.command  run-model-integration-test.command  run-models-integration-test.command
apps/polychat/: README.md  WISHES.md  prompts.md  pyproject.toml
apps/polychat/docs/: publishing.md
apps/polychat/scripts/: check-mypy-staged.command  check.command  clean.command  generate-command-docs.py  publish.py  run-chat-integration-test.command  run-models-integration-test.command  test-chat.command  test-models.command  test.command
apps/polychat/tests/: __init__.py  conftest.py  test_ai_limits.py  test_ai_runtime_limits.py  test_chat.py  test_chat_integration.py  test_chat_manager.py  test_citations.py  test_cli.py  test_command_docs.py  test_commands_chat_files.py  test_commands_context.py  test_commands_defaults.py  test_commands_history.py  test_commands_input.py  test_commands_purge.py  test_commands_rewind.py  test_commands_runtime.py  test_commands_safe.py  test_commands_status.py  test_compat_ai_facades.py  test_config.py  test_costs.py  test_docs_conformance.py  test_docs_readme.py  test_domain_chat.py  test_domain_profile.py  test_helper_ai.py  test_helpers.py  test_hex_id.py  test_keys_credential_manager.py  test_keys_keychain.py  test_last_interaction.py  test_logging_schema.py  test_logging_utils.py  test_maintainability_policy.py  test_message_formatter.py  test_mode_combinations.py  test_models.py  test_models_integration.py  (+21 more)
apps/polychat/tools/: clean.command  install.command  publish.py
apps/pydeli/: README.md  pyproject.toml
apps/pydeli/scripts/: install.command  test.command
apps/pydeli/tests/: test_archive.py  test_archiver.py  test_auditor.py  test_builder.py  test_cli.py  test_config.py  test_output_segments.py  test_paths.py  test_publisher.py  test_registry.py  test_state_store.py  test_version_audit.py
apps/tk/: DECISIONS.md  LICENSE  README.md  TEST_PLAN.md  WHAT.md  WISHES.md  WORK_LOG.md  _HOW.md  _WHAT.md  pyproject.toml
apps/tk/data/: data.json  profile.json
apps/tk/internal_docs/: HOW.md  WORK_LOG.md
apps/tk/scripts/: clean.command  install.command  run.command
apps/tk/tests/: conftest.py  test_cli.py  test_commands.py  test_data.py  test_dispatcher.py  test_docs_consistency.py  test_formatters.py  test_markdown.py  test_models.py  test_output_segments.py  test_profile.py  test_prompts.py  test_repl.py  test_session.py  test_subjective_date.py  test_validation.py
apps/tk/tools/: clean.command  install.command  run.command
apps/viber/: README.md  pyproject.toml
apps/viber/scripts/: clean.command
apps/viber/tests/: conftest.py  test_cli.py  test_models.py  test_path_mapping.py  test_queries.py  test_renderer.py  test_repl.py  test_service.py  test_store.py
(+385 files in other folders)
