[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "emojihunt"
version = "0.1.0"
description = "Scan files for emoji usage and produce HTML artifacts for review"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "nao7sep", email = "nao7sep@gmail.com" },
]
dependencies = [
    "emoji>=2.0.0",
]

[project.scripts]
emojihunt = "emojihunt.__main__:main"

[dependency-groups]
dev = ["pytest", "ruff", "mypy"]
