[tool.poetry]
name = "poly-chat"
version = "0.1.0"
description = "Multi-AI CLI chat tool for long-term, version-controlled conversations"
authors = ["nao7sep <nao7sep@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "poly_chat", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
prompt-toolkit = "^3.0.43"
openai = "^1.12.0"
anthropic = "^0.18.1"
google-generativeai = "^0.4.0"
aiofiles = "^23.2.1"
keyring = "^24.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
pytest-mock = "^3.12.0"
black = "^24.1.1"
ruff = "^0.2.1"
mypy = "^1.8.0"

[tool.poetry.scripts]
pc = "poly_chat.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests that make real API calls (deselect with '-m \"not integration\"')",
    "e2e: marks end-to-end tests that validate complete workflows",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
