[tool.poetry]
name = "poly-chat"
version = "0.1.0"
description = "Multi-AI CLI chat tool for long-term, version-controlled chats"
authors = ["nao7sep <nao7sep@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poly_chat", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
prompt-toolkit = ">=3.0.52"
openai = ">=2.20.0"
anthropic = ">=0.79.0"
aiofiles = ">=25.1.0"
keyring = ">=25.7.0"
google-genai = ">=1.63.0"
tenacity = ">=9.1.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2"
pytest-asyncio = ">=1.3.0"
pytest-mock = ">=3.15.1"
black = ">=26.1.0"
ruff = ">=0.15.1"
mypy = ">=1.19.1"

[tool.poetry.scripts]
pc = "poly_chat.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests that make real API calls (deselect with '-m \"not integration\"')",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
