[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "polychat"
version = "0.1.0"
description = "Multi-AI CLI chat tool for long-term, version-controlled chats"
authors = [{name = "nao7sep", email = "nao7sep@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "prompt-toolkit",
    "openai",
    "anthropic",
    "aiofiles",
    "keyring",
    "google-genai",
    "tenacity",
]

[project.scripts]
polychat = "polychat.cli:main"

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "pytest-mock", "ruff", "mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests that make real API calls (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
