[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "tk"
version = "0.1.0"
description = "A quick CLI app to manage tasks"
authors = [{name = "nao7sep", email = "nao7sep@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tzlocal",
    "tzdata ; platform_system == 'Windows'",
]

[project.scripts]
tk = "tk.cli:main"

[dependency-groups]
dev = ["pytest", "pytest-mock", "pytest-cov", "freezegun"]
